# jus-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: cron_schedule  daily_scrape.sh
src/: daily_run.py  main.py
src/api/: __init__.py  api_client.py  config.py
src/extraction/: __init__.py  data_extractor.py
src/jus_scraper/config/: settings.py
src/jus_scraper/models/: publicacao.py
src/jus_scraper/scrapers/: dje_scraper.py
src/jus_scraper/utils/: js_scripts.py  text_parser.py
src/models/: __init__.py  publicacao.py
src/scraper/: __init__.py  cache_manager.py  dje_scraper.py  frame_handler.py  organizador_downloads.py
src/utils/: __init__.py  config.py  logger.py
